--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,8 @@
 :root {
-  --grey: #a7a7a7;
-  --grey1: #818181;
-  --red: #f43a3a;
+  --grey: #d9d9d9;
+  --dark: #898989;
   --white: #ffff;
   --black: #000000;
-  --background: #eeeeee;
-  --footer: #454545;
-  --blue: #2582ff;
-  --green: #22bf73;
-  --header: #f0f0f0;
-  --button: #a7a7a7;
-  --buttonHover: #727272;
 
   --base-size: 200px;
   --base-height: 173px;
