add: about us component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
   --black: #000000;
   --background: #eeeeee;
   --card: #e6e6e6;
+  --contact: #282828;
+  --smart: #404040;
 
   --base-size: 200px;
   --base-height: 173px;
